--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,13 +43,16 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            python -m venv venv
-            . venv/bin/activate
             pip install -r requirements.txt
       - run:
           name: Run Linting
           command: |
-            flake8 .
+            if flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics | grep -q "0"; then
+              echo "Lint has passed and ready to merge"
+            else
+              echo "Lint failed, fix the issues"
+              exit 1
+            fi
       - run:
           name: Linting Done
           command: echo "Linting complete."
@@ -61,8 +64,6 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            python -m venv venv
-            . venv/bin/activate
             pip install -r requirements.txt
       - run:
           name: Run Tests
@@ -81,6 +82,7 @@ jobs:
             curl -X POST -H "Authorization: token ${GITHUB_TOKEN}" \
             -d '{"body":"PR failed on this stage: ${CIRCLE_STAGE} - [Job link](${CIRCLE_BUILD_URL})"}' \
             https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/issues/${CIRCLE_PR_NUMBER}/comments
+          when: on_fail
 
 workflows:
   version: 2
@@ -111,6 +113,4 @@ workflows:
                 - master
           requires:
             - test
-          # Adding condition to run only if a job fails
-          condition:
-            on_failure: true
+            - lint
