feat: new changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,8 +85,7 @@ jobs:
           when: on_fail
 
 workflows:
-  version: 2
-  lint_and_test:
+  say-hello-workflow:
     jobs:
       - lint:
           filters:
