--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,9 @@
 version: 2.1
 
-executors:
-  python-executor:
-    docker:
-      - image: circleci/python:3.8
-    working_directory: ~/repo
-
 jobs:
   printEnv:
-    executor: python-executor
+    docker:
+      - image: circleci/python:3.8
     steps:
       - run:
           name: print envs
@@ -16,7 +11,8 @@ jobs:
             printenv
 
   lint:
-    executor: python-executor
+    docker:
+      - image: circleci/python:3.8
     steps:
       - checkout
       - run:
@@ -37,7 +33,8 @@ jobs:
           command: echo "Linting complete."
 
   test:
-    executor: python-executor
+    docker:
+      - image: circleci/python:3.8
     steps:
       - checkout
       - run:
@@ -53,7 +50,8 @@ jobs:
           command: echo "Test done."
 
   pr-comment-fail:
-    executor: python-executor
+    docker:
+      - image: circleci/python:3.8
     steps:
       - run:
           name: Add Comment to PR
@@ -64,6 +62,7 @@ jobs:
           when: on_fail
 
 workflows:
+  version: 2
   say-hello-workflow:
     jobs:
       - lint:
